<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/calculate_line_one"
        android:textSize="20sp"
        android:layout_marginTop="32dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/calculate_line_two"
        android:textSize="20sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/sim_only_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sim_only_cost"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/sim_only_cost_box"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/sim_only_cost_hint"/>

    <TextView
        android:id="@+id/cost_of_handset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/cost_of_handset" />

    <EditText
        android:id="@+id/cost_of_handset_box"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/cost_of_handset_hint"/>

    <TextView
        android:id="@+id/contract_monthly_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/contract_monthly_cost"/>

    <EditText
        android:id="@+id/contract_monthly_cost_box"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/contract_monthly_cost_hint"/>

    <TextView
        android:id="@+id/contract_upfront_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/contract_upfront_cost"/>

    <EditText
        android:id="@+id/contract_upfront_cost_box"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="numberDecimal"
        android:hint="@string/contract_upfront_cost_hint"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        >

        <Button android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_difference_button" />

    </LinearLayout>

</LinearLayout>